# first-ollama-local-agent

./: README.md  main.py  pyproject.toml  vector.py
chroma_langchain_db/: chroma.sqlite3
